--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "bootstrap": "^4.4.1",
     "intl": "^1.2.5",
     "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.4",
-    "tether": "^1.4.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
